--- a/webdesshop/index.html
+++ b/webdesshop/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -152,8 +153,8 @@
         </div>
         <div class="action">
             <form>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <input type="submit" name="submit" value="submit" required>
+                <input type="email" name="email" placeholder="Your Email">
+                <input type="submit" name="submit" value="submit">
             </form>
         </div>
     </section>
@@ -180,8 +181,6 @@
                 
             });
         });
-    </script>
-    
     </script>
 </body>
 </html>
